hphp/hack/test/typecheck/reified_generics/incorrect-num-reified-extends-1.php.exp
File "incorrect-num-reified-extends-1.php", line 4, characters 26-34:
Wrong number of type arguments (expected 1, got 2) (Typing[4101])
File "incorrect-num-reified-extends-1.php", line 3, characters 7-7:
Definition is here
